SET ( oslinfo_srcs oslinfo.cpp )
ADD_EXECUTABLE ( oslinfo ${oslinfo_srcs} )
SET (LINK_PLATFORM "")
if(MINGW)
	SET (LINK_PLATFORM "-lpthread")
endif()
LINK_ILMBASE ( oslinfo )
TARGET_LINK_LIBRARIES ( oslinfo oslquery ${OPENIMAGEIO_LIBRARY} ${Boost_LIBRARIES} ${CMAKE_DL_LIBS} ${LINK_PLATFORM})
INSTALL ( TARGETS oslinfo RUNTIME DESTINATION bin )

if (WIN32 AND BUILDSTATIC)
    TARGET_LINK_LIBRARIES ( oslinfo psapi.lib ${LINK_PLATFORM})
endif ()
